# quivers

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: index.md
docs/api/: index.md  program.md
docs/api/categorical/: adjunctions.md  base_change.md  functors.md  monoidal.md  natural_transformations.md  traced.md
docs/api/continuous/: boundaries.md  families.md  flows.md  morphisms.md  programs.md  spaces.md
docs/api/core/: extra_quantales.md  morphisms.md  objects.md  quantales.md  tensor_ops.md  util.md
docs/api/dsl/: ast_nodes.md  compiler.md  lexer.md  parser.md  tokens.md
docs/api/enriched/: day_convolution.md  ends_coends.md  kan_extensions.md  optics.md  profunctors.md  weighted_limits.md  yoneda.md
docs/api/inference/: conditioning.md  elbo.md  guide.md  predictive.md  svi.md  trace.md
docs/api/monadic/: algebras.md  comonads.md  distributive_laws.md  monads.md
docs/api/stochastic/: biclosed.md  categories.md  families.md  giry.md  inside.md  morphisms.md  parsers.md  quantale.md  queries.md  rules.md  semiring.md  transforms.md
docs/developer/: contributing.md
docs/examples/: bayesian-regression.md  bidirectional-rnn.md  ccg.md  continuous-hmm.md  custom-rules.md  elman-rnn.md  gru.md  hmm.md  index.md  lstm.md  mixture-model.md  multimodal-tlg.md  pcfg.md  transformer.md  type-logical.md  vae.md  vanilla-rnn.md
docs/getting-started/: architecture.md  installation.md  quickstart.md
docs/guides/: categorical.md  continuous.md  core.md  dsl.md  enriched.md  index.md  inference.md  monadic.md  morphisms.md  programs.md  stochastic.md
docs/hooks/: register_qvr_lexer.py
docs/js/: disable-hljs.js
docs/tutorials/: first-quiver.md  fuzzy-factorization.md  index.md  probabilistic-programs.md  stochastic-relations.md  variational-inference.md
editors/vscode-qvr/: language-configuration.json  package.json
editors/vscode-qvr/syntaxes/: qvr.tmLanguage.json
src/quivers/: __init__.py  giry.py  program.py
src/quivers/categorical/: __init__.py  adjunctions.py  base_change.py  functors.py  monoidal.py  natural_transformations.py  traced.py
src/quivers/continuous/: __init__.py  boundaries.py  families.py  flows.py  inline.py  morphisms.py  programs.py  scan.py  spaces.py
src/quivers/core/: __init__.py  _util.py  extra_quantales.py  morphisms.py  objects.py  quantales.py  tensor_ops.py
src/quivers/dsl/: __init__.py  ast_nodes.py  compiler.py  lexer.py  parser.py  pygments_lexer.py  tokens.py
src/quivers/enriched/: __init__.py  day_convolution.py  ends_coends.py  kan_extensions.py  optics.py  profunctors.py  yoneda.py  (+1 more)
tests/: test_adjunctions.py  test_algebras.py  test_base_change.py  test_comonads.py  test_componentwise_lift.py  test_continuous.py  test_day_convolution.py  test_distributive_laws.py  test_dsl.py  test_ends_coends.py  test_extra_quantales.py  test_functors.py  test_identity.py  test_inference.py  test_kan_extensions.py  test_monads.py  test_monoidal.py  test_morphisms.py  test_natural_transformations.py  test_objects.py  test_optics.py  test_profunctors.py  test_program.py  test_quantales.py  test_stochastic.py  test_tensor_ops.py  test_traced.py  test_weighted_limits.py  test_yoneda.py
(+46 files in other folders)
