[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quivers"
version = "0.1.0"
description = "Computational category theory as differentiable tensor programs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [{name = "Aaron Steven White"}]
keywords = [
    "category-theory",
    "enriched-categories",
    "pytorch",
    "tensor",
    "probabilistic-programming",
    "quantale",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "torch>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
]
docs = [
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-cinder",
    "pymdown-extensions",
]

[project.urls]
Homepage = "https://github.com/aaronstevenwhite/quivers"
Repository = "https://github.com/aaronstevenwhite/quivers"
Documentation = "https://aaronstevenwhite.github.io/quivers"
Changelog = "https://github.com/aaronstevenwhite/quivers/blob/main/CHANGELOG.md"

[project.entry-points."pygments.lexers"]
qvr = "quivers.dsl.pygments_lexer:QvrLexer"

[tool.hatch.build.targets.wheel]
packages = ["src/quivers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
